add an encryption public key endpoint
